// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup Popup baseVue demo works fine 1`] = `
<div>
  <!-- 共三种方式自定义浮层内容 -->
  <!-- 使用 content 属性渲染浮层内容 -->
  <div
    class="t-popup-demo-base-item"
  >
    <div
      class="t-popup__reference"
    >
      <transition-stub>
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup__content"
            style="max-width: 480px;"
          >
            可以在浮层内容中描述禁用原因
            <!---->
          </div>
        </div>
      </transition-stub>
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default t-is-disabled"
        disabled=""
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          禁用状态
          
        </span>
      </button>
      
    </div>
  </div>
  <!-- 使用 content 插槽渲染浮层内容 -->
  <!-- slot="content" 写法不建议使用，请使用 #content 写法 -->
  <div
    class="t-popup-demo-base-item"
  >
    <div
      class="t-popup__reference"
    >
      <transition-stub>
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup__content"
          >
            
            <div>
              触发元素是指触发浮层内容显示的元素
            </div>
            
            <!---->
          </div>
        </div>
      </transition-stub>
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          触发元素
          
        </span>
      </button>
      
    </div>
  </div>
  <!-- 使用 content 渲染函数输出浮层内容 -->
  <div
    class="t-popup-demo-base-item"
  >
    <div
      class="t-popup__reference"
    >
      <transition-stub>
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup__content"
          >
            <div>
              浮层内容是指浮层里面显示的全部内容，这里的浮层内容使用渲染函数定义
            </div>
            <!---->
          </div>
        </div>
      </transition-stub>
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          浮层内容
          
        </span>
      </button>
      
    </div>
  </div>
</div>
`;

exports[`Popup Popup containerVue demo works fine 1`] = `
<div>
  <div
    class="t-popup-demo-block"
  >
    <div
      class="t-popup__reference"
      id="myPopup"
    >
      <transition-stub>
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup__content"
            style="max-width: 480px;"
          >
            触发元素的父元素是组件根元素，通过 CSSSelector 定义
            <!---->
          </div>
        </div>
      </transition-stub>
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          父元素为组件本身
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class="t-popup-demo-block"
    id="second-popup"
  >
    <div
      class="t-popup__reference"
    >
      <transition-stub>
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup__content"
            style="max-width: 480px;"
          >
            触发元素的父元素是组件跟元素，通过 Funnction 定义
            <!---->
          </div>
        </div>
      </transition-stub>
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          父元素为其他元素
          
        </span>
      </button>
      
    </div>
  </div>
</div>
`;

exports[`Popup Popup destroyVue demo works fine 1`] = `
<div>
  <div
    class="t-popup__reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content"
          style="max-width: 480px;"
        >
          这是popup内容
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
        隐藏即销毁
        
      </span>
    </button>
    
  </div>
</div>
`;

exports[`Popup Popup disabledVue demo works fine 1`] = `
<div>
  <div
    class="t-popup__reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-is-disabled"
          style="max-width: 480px;"
        >
          这是popup内容
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-is-disabled"
      disabled=""
      type="button"
    >
      <span
        class="t-button__text"
      >
        
        禁用浮层显示
        
      </span>
    </button>
    
  </div>
</div>
`;

exports[`Popup Popup placementVue demo works fine 1`] = `
<div
  class="container"
>
  <div
    class="t-popup__reference placement top center"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-popup__content--arrow"
          style="max-width: 480px;"
        >
          这是popup内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         top 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup__reference placement top left"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-popup__content--arrow"
          style="max-width: 480px;"
        >
          这是popup内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         top-left 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup__reference placement top right"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-popup__content--arrow"
          style="max-width: 480px;"
        >
          这是popup内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         top-right 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup__reference placement bottom center"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-popup__content--arrow"
          style="max-width: 480px;"
        >
          这是popup内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         bottom 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup__reference placement bottom left"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-popup__content--arrow"
          style="max-width: 480px;"
        >
          这是popup内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         bottom-left 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup__reference placement bottom right"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-popup__content--arrow"
          style="max-width: 480px;"
        >
          这是popup内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         bottom-right 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup__reference placement align"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-popup__content--arrow"
          style="max-width: 480px;"
        >
          这是popup内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         left 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup__reference placement top-align"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-popup__content--arrow"
          style="max-width: 480px;"
        >
          这是popup内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         left-top 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup__reference placement bottom-align"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-popup__content--arrow"
          style="max-width: 480px;"
        >
          这是popup内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         left-bottom 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup__reference placement right-full align"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-popup__content--arrow"
          style="max-width: 480px;"
        >
          这是popup内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         right 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup__reference placement right-full top-align"
    destroy-on-hide=""
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-popup__content--arrow"
          style="max-width: 480px;"
        >
          这是popup内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         right-top 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup__reference placement right-full bottom-align"
    destroy-on-hide=""
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-popup__content--arrow"
          style="max-width: 480px;"
        >
          这是popup内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         right-bottom 
        
      </span>
    </button>
    
  </div>
</div>
`;

exports[`Popup Popup styleVue demo works fine 1`] = `
<div>
  <div
    class="t-popup-demo-base-item"
  >
    <div
      class="t-popup__reference"
    >
      <transition-stub>
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup__content tdesign-demo__custom-popup"
            style="max-width: 480px;"
          >
            浮层拥有自定义类名，可以自定义浮层样式
            <!---->
          </div>
        </div>
      </transition-stub>
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          自定义浮层类名
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class="t-popup-demo-base-item"
  >
    <div
      class="t-popup__reference"
    >
      <transition-stub>
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup__content"
            style="max-width: 480px;"
          >
            浮层宽度是固定的，不会随内容变化而变化
            <!---->
          </div>
        </div>
      </transition-stub>
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          固定浮层宽度
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class="t-popup-demo-base-item"
  >
    <div
      class="t-popup__reference"
    >
      <transition-stub>
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup__content"
            style="max-width: 480px;"
          >
            可以设置浮层最大宽度，当内容超出最大宽度时，文本内容才会换行
            <!---->
          </div>
        </div>
      </transition-stub>
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          浮层最大宽度
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class="t-popup-demo-base-item"
  >
    <div
      class="t-popup__reference"
    >
      <transition-stub>
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup__content"
            style="max-width: 480px;"
          >
            overlayStyle 作为函数使用，可以让浮层内容和触发元素同宽
            <!---->
          </div>
        </div>
      </transition-stub>
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          浮层和触发元素同宽
          
        </span>
      </button>
      
    </div>
  </div>
</div>
`;

exports[`Popup Popup triggerElementVue demo works fine 1`] = `
<div>
  <!-- 总共四种自定义触发元素的方式 -->
  <div>
    <div
      class="t-popup-demo-base-item"
    >
      <div
        class="t-popup__reference"
      >
        <transition-stub>
          <div
            aria-hidden="true"
            class="t-popup"
            role="tooltip"
            style="display: none;"
          >
            <div
              class="t-popup__content"
              style="max-width: 480px;"
            >
              我的触发元素通过默认插槽渲染
              <!---->
            </div>
          </div>
        </transition-stub>
        
        <button
          class="t-button t-size-m t-button--variant-outline t-button--theme-default"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            默认插槽定义触发元素
            
          </span>
        </button>
        
      </div>
    </div>
    <div
      class="t-popup-demo-base-item"
    >
      <div
        class="t-popup__reference"
      >
        <transition-stub>
          <div
            aria-hidden="true"
            class="t-popup"
            role="tooltip"
            style="display: none;"
          >
            <div
              class="t-popup__content"
              style="max-width: 480px;"
            >
              我的触发元素通过插槽(triggerElement)渲染
              <!---->
            </div>
          </div>
        </transition-stub>
        
        <button
          class="t-button t-size-m t-button--variant-outline t-button--theme-default"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            具名插槽定义触发元素
            
          </span>
        </button>
        
      </div>
    </div>
  </div>
  <br />
  <div>
    <div
      class="t-popup-demo-base-item"
    >
      <div
        class="t-popup__reference"
      >
        <transition-stub>
          <div
            aria-hidden="true"
            class="t-popup"
            role="tooltip"
            style="display: none;"
          >
            <div
              class="t-popup__content"
              style="max-width: 480px;"
            >
              我的触发元素通过渲染函数 default 渲染
              <!---->
            </div>
          </div>
        </transition-stub>
        <button
          class="t-button t-size-m t-button--variant-outline t-button--theme-default"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            渲染函数定义触发元素1
            
          </span>
        </button>
      </div>
    </div>
    <div
      class="t-popup-demo-base-item"
    >
      <div
        class="t-popup__reference"
      >
        <transition-stub>
          <div
            aria-hidden="true"
            class="t-popup"
            role="tooltip"
            style="display: none;"
          >
            <div
              class="t-popup__content"
              style="max-width: 480px;"
            >
              我的触发元素通过渲染函数 triggerElement 渲染
              <!---->
            </div>
          </div>
        </transition-stub>
        <button
          class="t-button t-size-m t-button--variant-outline t-button--theme-default"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            渲染函数定义触发元素2
            
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popup Popup triggerVue demo works fine 1`] = `
<div
  class="popup-demo-container"
>
  <div
    class="t-popup__reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content"
          style="max-width: 480px;"
        >
          文字提示仅展示文本内容
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         悬浮时触发（默认） 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup__reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content"
          style="max-width: 480px;"
        >
          文字提示仅展示文本内容
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         点击时触发 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup__reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content"
          style="max-width: 480px;"
        >
          文字提示仅展示文本内容
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input t-size-m t-input__inner"
    >
      <!---->
      <!---->
      <input
        autocomplete="false"
        placeholder="获得焦点时触发"
        type="text"
      />
      <!---->
      <!---->
    </div>
    
  </div>
  <div
    class="t-popup__reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content"
          style="max-width: 480px;"
        >
          文字提示仅展示文本内容
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         右击时触发 
        
      </span>
    </button>
    
  </div>
</div>
`;

exports[`Popup Popup visibleVue demo works fine 1`] = `
<div>
  <div
    class="t-popup__reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content"
        >
          
          <div>
            浮层显示与否可以在外部自由控制
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
        点击控制浮层显示
        
      </span>
    </button>
    
  </div>
</div>
`;
